Platform -- Deny to access to template file in browser.

--- a/.htaccess
+++ b/.htaccess
@@ -6,3 +6,11 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteRule ^(.*)$ index.php/$1 [QSA,PT,L]
 </IfModule>
+<Files *.html>
+Order Allow,Deny
+Deny from all
+</Files>
+<Files *.tpl>
+Order Allow,Deny
+Deny from all
+</Files>
